# xplc

./: .cvsignore  .gitignore  CREDITS  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure.ac  configure.in  dlopen.supp  uuid2cdef.pl  xplc.dsp  xplc.sln
VisualC++/: testobj.vcproj  tests.vcproj  xplc-cxx.vcproj  xplc.def  xplc.sln  xplc.vcproj
config/: .cvsignore  config.mk.in  cvs-users  exports.map  libdl.supp  main.mk  rules.mk  vars.mk  version.mk
debian/: .cvsignore  changelog  control  control.in  copyright  libxplc-dev.install  libxplc.install  rules  source.lintian-overrides  uuidcdef.install  uuidcdef.manpages
examples/: Makefile
examples/simple-module/: IExample.h  Makefile  Makefile.in  module.cpp  module.h  simple.cpp  simple.h
examples/simple-module-user/: Makefile  Makefile.in  simple.cpp
idlc/: .cvsignore  main.cpp  rules.mk  vars.mk
include/: config.h
include/xplc/: ICategory.h  ICategoryEntry.h  ICategoryIterator.h  ICategoryManager.h  IFactory.h  IGenericFactory.h  IModule.h  IModuleLoader.h  IModuleManagerFactory.h  IMoniker.h  IMonikerService.h  IObject.h  IServiceHandler.h  IServiceManager.h  IServiceManagerHandler.h  ISimpleDynamicLoader.h  ISingleModuleLoader.h  IStaticServiceHandler.h  IWeakRef.h  autoconf.h.in  config.h  core.h  delete.h  factory.h  module.h  ptr.h  trace.h  utils.h  uuid.h  uuidops.h  xplc.h
tests/: .cvsignore  rules.mk  test.cpp  test.h  test000.cpp  test001.cpp  test002.cpp  test003.cpp  test004.cpp  test005.cpp  test006.cpp  test007.cpp  test008.cpp  test009.cpp  test010.cpp  test011.cpp  testmain.cpp  testobj.cpp  testobj.h  tests.vcproj  vars.mk
tests/test000/: rules.mk  test.cpp  test000.dsp  vars.mk
tests/test001/: rules.mk  test.cpp  test001.dsp  vars.mk
tests/test002/: .cvsignore  rules.mk  test.cpp  test002.dsp  vars.mk
tests/test003/: rules.mk  test.cpp  test003.dsp  vars.mk
tests/test004/: rules.mk  test.cpp  test004.dsp  vars.mk
tests/test005/: .cvsignore  rules.mk  test.cpp  test005.dsp  testcomponent.dsp  testobj.cpp  testobj.h  vars.mk
tests/test006/: rules.mk  test.cpp  vars.mk
tests/test007/: rules.mk  test.cpp  vars.mk
tests/test008/: rules.mk  test.cpp  vars.mk
tests/test009/: rules.mk  test.cpp  vars.mk
uuid/: .cvsignore  ChangeLog  gen_uuid.c  rules.mk  vars.mk
xplc/: category.cpp  category.h  categorynode.h  catiter.cpp  catiter.h  catmgr.cpp  catmgr.h  factory.cpp  factory.h  handlernode.h  loader.cpp  loader.h  moduleloader.cpp  moduleloader.h  modulemgr.cpp  monikernode.h  monikers.cpp  monikers.h  new.cpp  new.h  objectnode.h  rules.mk  servmgr.cpp  servmgr.h  simpledl.cpp  simpledl.h  singleloader.cpp  singleloader.h  statichandler.cpp  statichandler.h  vars.mk  xplc.cpp
xplc-cxx/: factory.cpp  getiface.cpp  rules.mk  strtouuid.cpp  uuidtostr.cpp  xplc.cpp
