dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id: configure.in,v 1.9 2001/06/08 23:51:05 pphaneuf Exp $)

AC_INIT(include/xplc/xplc.h)

AC_CANONICAL_HOST

AC_ARG_ENABLE(debug,
  [  --enable-debug          debugging options])
AC_SUBST(enable_debug)

AC_ARG_ENABLE(optimization,
  [  --disable-optimization  optimization options])
AC_SUBST(enable_optimization)

AC_ARG_ENABLE(warnings,
  [  --disable-warnings      extra warnings])
AC_SUBST(enable_warnings)

AC_ARG_ENABLE(rtti,
  [  --enable-rtti           C++ Run-Time Type Indentification])
AC_SUBST(enable_rtti)

AC_ARG_ENABLE(exceptions,
  [  --enable-exceptions     C++ exceptions])
AC_SUBST(enable_exceptions)

dnl Checks for programs.
CXXFLAGS="$CXXFLAGS "
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(config/config.mk)

