dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id: configure.in,v 1.14 2002/03/20 17:44:03 pphaneuf Exp $)

AC_INIT(include/xplc/xplc.h)

AC_CANONICAL_HOST

AC_ARG_ENABLE(debug,
  [  --enable-debug          debugging options])
AC_SUBST(enable_debug)

AC_ARG_ENABLE(fatal-warnings,
  [  --enable-fatal-warnings turn warnings into errors])
AC_SUBST(enable_fatal_warnings)

AC_ARG_ENABLE(optimization,
  [  --disable-optimization  optimization options])
AC_SUBST(enable_optimization)

AC_ARG_ENABLE(warnings,
  [  --disable-warnings      extra warnings])
AC_SUBST(enable_warnings)

AC_ARG_ENABLE(rtti,
  [  --enable-rtti           C++ run-time type identification (compiler)])
AC_SUBST(enable_rtti)

AC_ARG_ENABLE(exceptions,
  [  --enable-exceptions     C++ exceptions (compiler)])
AC_SUBST(enable_exceptions)

dnl Checks for programs.
CXXFLAGS="$CXXFLAGS "
AC_PROG_CXX
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(config/config.mk)

